adds links to techStuff

--- a/index.html
+++ b/index.html
@@ -352,23 +352,23 @@
                 </li>
                 <li>
                     <a 
-                    href="https://youtu.be/example_link13"
+                    href="https://youtu.be/lr1KuL8OmJY?si=PSjt37J3nHE0uTBh"
                     target="_blank">
-                    Example Tech Video 1
+                    The Circle of Unfixable Security Issues
                     </a>
                 </li>
                 <li>
                     <a 
-                    href="https://youtu.be/example_link13"
+                    href="https://youtu.be/vvhC64hQZMk?si=gidbw-1CK7Lxk21R"
                     target="_blank">
-                    Example Tech Video 1
+                    Whatsapp System Design
                     </a>
                 </li>
                 <li>
                     <a 
-                    href="https://youtu.be/example_link13"
+                    href="https://youtu.be/AF8d72mA41M?si=QFhp008ySyNOXz3L"
                     target="_blank">
-                    Example Tech Video 1
+                    Why It Was Almost Impossible to Make the Blue LED
                     </a>
                 </li>
             </ul>
