adds template for peacefulCooking section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="rm-underline" href="#funnyCartoonEnglish">#funnyCartoonEnglish </a>
         <a class="rm-underline" href="#funnyCartoonHindi">#funnyCartoonHindi </a>
         <a class="rm-underline" href="#techStuff">#techStuff </a>
-        <a class="rm-underline" href="#peacefulcooking"></a>
+        <a class="rm-underline" href="#peacefulCooking">#peacefulCooking</a>
 
         </div>
 
@@ -376,6 +376,61 @@
         </div>
 
     </div>
+
+    <div id="peacefulCooking" class="section">
+
+        <!-- Title for Stuff -->
+        <h1 class="center underline">Peaceful Cooking</h1>
+
+        <!-- Content for Stuff -->
+        <div name="content"> 
+            
+            <ul>
+                <li>
+                    <a 
+                    href="https://youtu.be/example_link"
+                    target="_blank">
+                    Example Video 1
+                    </a>
+                </li>
+
+                <li>
+                    <a 
+                    href="https://youtu.be/example_link"
+                    target="_blank">
+                    Example Video 1
+                    </a>
+                </li>
+
+                <li>
+                    <a 
+                    href="https://youtu.be/example_link"
+                    target="_blank">
+                    Example Video 1
+                    </a>
+                </li>
+
+                <li>
+                    <a 
+                    href="https://youtu.be/example_link"
+                    target="_blank">
+                    Example Video 1
+                    </a>
+                </li>
+
+                <li>
+                    <a 
+                    href="https://youtu.be/example_link"
+                    target="_blank">
+                    Example Video 1
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+
+
 
 
     <script src="script.js"></script>
