changed some links

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
                 <li>
                     <a 
-                    href="https://youtu.be/pJfdVUhiqt0?si=rYtCoai9XEynrrTr"
+                    href="https://youtu.be/_f6akJrDSFs?si=LBSEk2lfYAQV9dlz"
                     target="_blank">
-                    Luffy eating Shirahoshi's food [HD]
+                    L Eating Sweets | Deathnote
                     </a>
                 </li>
 
@@ -103,17 +103,17 @@
 
                 <li>
                     <a 
-                    href="https://youtu.be/gok-gkH4bwA?si=_sqp837wb1cpmZaQ"
+                    href="https://youtu.be/FfOTmfwRTFs?si=Jkt0KzoBsnPrwzvo"
                     target="_blank">
-                    Epic Chili Cheese Fries!! (10,120 Calories) | Matt Stonie
+                    Testing Russian Military MRE (Meal Ready to Eat) | CrazyRussianHacker
                     </a>
                 </li>
 
                 <li>
                     <a 
-                    href="https://youtu.be/GbmeY9Zu7yY?si=kyc71NtatTCL71hG" 
+                    href="https://youtu.be/XdP1ejKBQ-A?si=fEWPWc5NwWkM2toa" 
                     target="_blank">
-                    THE 10LB 'BURGATORY' CHALLENGE | BeardMeatsFood
+                    Strongman Swaps Diet With Wife For A Day | Eddie Hall
                     </a>
                 </li>
 
@@ -150,9 +150,9 @@
             <ul>
                 <li>
                     <a 
-                    href="https://youtu.be/Fo3FeB3yXUU?si=XiQfD9mBHnNGEwhC"
+                    href="https://youtu.be/NYTgxyaqkiA?si=L_maBee7vZ_F3iCV"
                     target="_blank">
-                    Goku VIOLATES everyone for over 6 minutes
+                    Classic Popeye: County Fair
                 </a>
                 </li>
 
@@ -166,9 +166,9 @@
 
                 <li>
                     <a 
-                    href="https://youtu.be/tI1jF98hlmM?si=PZdivipjh_UZYvn_" 
+                    href="https://youtu.be/m-6ir-gFpbA?si=2FNWZQwvFGSNxtEY" 
                     target="_blank">
-                    Shopping For NEW YEAR! | Mr Bean Cartoon
+                    The Pink Panther in "Pink Blue Plate"
                     </a>
                 </li>
                 
@@ -377,6 +377,7 @@
 
     </div>
 
+
     <div id="peacefulCooking" class="section">
 
         <!-- Title for Stuff -->
@@ -388,41 +389,41 @@
             <ul>
                 <li>
                     <a 
-                    href="https://youtu.be/example_link"
+                    href="https://youtu.be/G6RdmyLAuJg?si=LuOr8IUGjdwY4-kT"
                     target="_blank">
-                    Example Video 1
+                    Crispy French Fries | Grandpa Kitchen
                     </a>
                 </li>
 
                 <li>
                     <a 
-                    href="https://youtu.be/example_link"
+                    href="https://youtu.be/42Q3cNKoYxI?si=2IWvclbEmHh6ybod"
                     target="_blank">
-                    Example Video 1
+                    Epic Fried Whole Chicken | AlmazanKitchen
                     </a>
                 </li>
 
                 <li>
                     <a 
-                    href="https://youtu.be/example_link"
+                    href="https://youtu.be/eWSRdSwpUcs?si=SppOZ0-W95ZY3e-4"
                     target="_blank">
-                    Example Video 1
+                    Homemade & Handmade Burrata Cheese | Turkuaz Kitchen
                     </a>
                 </li>
 
                 <li>
                     <a 
-                    href="https://youtu.be/example_link"
+                    href="https://youtu.be/L8S89BCjQvo?si=QGPk5EVsPA9d1Om0"
                     target="_blank">
-                    Example Video 1
+                    6am Mornings Routines In Korea's Countryside
                     </a>
                 </li>
 
                 <li>
                     <a 
-                    href="https://youtu.be/example_link"
+                    href="https://youtu.be/F39VQzK3F4U?si=e_XK8ojVhIGAaZ6t"
                     target="_blank">
-                    Example Video 1
+                    Close-up on a Food Stall Owner at Midnight in Japan
                     </a>
                 </li>
             </ul>
