adds video link peaceful cooking

--- a/index.html
+++ b/index.html
@@ -426,6 +426,13 @@
                     Close-up on a Food Stall Owner at Midnight in Japan
                     </a>
                 </li>
+                <li>
+                    <a 
+                    href="https://youtu.be/27zqFKa1YbE?si=vWNkhESXEZCkKfJ5"
+                    target="_blank">
+                    The Poor Man's Feast
+                    </a>
+                </li>
             </ul>
         </div>
 
